--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ appdirs==1.4.0
 cycler==0.10.0
 functools32==3.2.3.post2
 matplotlib==2.0.0
+nose==1.3.7
 numpy==1.12.0
 packaging==16.8
 pandas==0.19.2
